# Deep_agent

./: .env.example  .gitignore  DEPLOY_CONTOUR.md  DOCUMENTATION.md  Dockerfile  LICENSE  README.md  SDK.py  SDK_USAGE.md  docker-compose.yml  extraction.py  field_specs.py  main.py  providers.py  requirements-contour.txt  requirements.txt  retrieval.py  tools.py
deploy/: .dockerignore  .env.example  .gitignore  Dockerfile  README_DEPLOY.md  custom_schema.py  docker-compose.yml  example.ipynb  extraction.py  gigachat_embeddings.py  main.py  netguard.py  schemas.py  tools.py  tracing.py  training.py
deploy/agent_init/: buisness_rules.md
deploy/certs/: README.md
deploy/instructions/: process.md  tool_tips.md
raglib/: PLAN.md  README.md  pyproject.toml  requirements-contour.txt
raglib/notebooks/: demo.ipynb
raglib/src/raglib/: __init__.py  api.py  models.py
raglib/src/raglib/agent/: __init__.py  llm.py  prompts.py  searcher.py
raglib/src/raglib/embeddings/: __init__.py  base.py  gigachat.py  hashing.py  openai_compat.py
raglib/src/raglib/indexing/: __init__.py  bm25.py  builder.py  store.py  vector.py
raglib/src/raglib/integrations/: langchain_tools.py
raglib/src/raglib/parsing/: __init__.py  clauses.py  markdown.py  ocr.py
raglib/src/raglib/recognition/: __init__.py  base.py  mock.py
raglib/src/raglib/search/: __init__.py  engine.py  toc.py
raglib/tests/: conftest.py  test_agent.py  test_ocr.py  test_parsing.py  test_recognition.py  test_ru_normalization.py  test_search.py  test_store_lifecycle.py  test_toc_navigation.py
raglib/tests/fixtures/: charter.md  notes.md  policy.md
tests/: conftest.py  test_budget_salvage.py  test_chunking.py  test_field_specs.py  test_finalize.py  test_minimax_xml.py  test_pages.py  test_providers_corrupted.py  test_retrieval.py  test_sections.py  test_state_fixes.py  test_tolerant_json.py  test_verify_fields.py  test_warm_context.py
tests/snapshots/: field_specs_extraction.json  field_subagents.json  output_schema.txt
