[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "raglib"
version = "0.1.0"
description = "RAG library: file(s) -> mocked text recognition -> hierarchical on-disk index -> multi-tool search (BM25, FAISS vector, hybrid, TOC, grep, agentic)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.7.4",
]

[project.optional-dependencies]
stem = ["snowballstemmer>=2.2"]                   # bm25_normalizer="stem" (best RU quality)
ru = ["pymorphy3>=1.3", "pymorphy3-dicts-ru"]     # bm25_normalizer="lemma"
gigachat = ["langchain-gigachat>=0.5"]            # GigaChat embeddings + chat, passed in directly
langchain = ["langchain-core>=0.1"]               # @tool wrappers (integrations/langchain_tools)
dev = ["pytest>=7.4", "ruff>=0.4", "build>=1.0",
       "snowballstemmer>=2.2", "pymorphy3>=1.3", "pymorphy3-dicts-ru"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
